// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`tag-list component render with props 1`] = `
<Bem
  block="tag-list"
  mods={
    Object {
      "readOnly": undefined,
      "selected": false,
    }
  }
>
  <Bem
    block="tag-list"
    elem="item"
    key="value1"
  >
    <Bem
      block="tag-list"
      elem="value"
      key="value"
    >
      value1
    </Bem>
    <Bem
      block="tag-list"
      elem="close"
      key="close"
    >
      <button2
        onClick={[Function]}
        tabIndex={0}
        theme="clear"
        view="classic"
      >
        <icon
          type="close"
        />
      </button2>
    </Bem>
  </Bem>
  <Bem
    block="tag-list"
    elem="item"
    key="value2"
  >
    <Bem
      block="tag-list"
      elem="value"
      key="value"
    >
      value2
    </Bem>
    <Bem
      block="tag-list"
      elem="close"
      key="close"
    >
      <button2
        onClick={[Function]}
        tabIndex={0}
        theme="clear"
        view="classic"
      >
        <icon
          type="close"
        />
      </button2>
    </Bem>
  </Bem>
  <Bem
    block="tag-list"
    elem="item"
    key="value3"
  >
    <Bem
      block="tag-list"
      elem="value"
      key="value"
    >
      value3
    </Bem>
    <Bem
      block="tag-list"
      elem="close"
      key="close"
    >
      <button2
        onClick={[Function]}
        tabIndex={0}
        theme="clear"
        view="classic"
      >
        <icon
          type="close"
        />
      </button2>
    </Bem>
  </Bem>
  <Bem
    block="tag-list"
    elem="input"
    key="input"
  >
    <textinput
      controlAttrs={
        Object {
          "onBlur": [Function],
          "onKeyDown": [Function],
          "onKeyUp": [Function],
        }
      }
      innerRef={[Function]}
      onChange={[Function]}
      placeholder="placeholder"
      showListOnFocus={true}
      size="m"
      text=""
      theme="normal"
      tone="grey"
      type="text"
      updateOnEnter={true}
      view="default"
    />
  </Bem>
</Bem>
`;

exports[`tag-list component render with readOnly=true 1`] = `
<Bem
  block="tag-list"
  mods={
    Object {
      "readOnly": true,
      "selected": false,
    }
  }
>
  <Bem
    block="tag-list"
    elem="item"
    key="value1"
  >
    <Bem
      block="tag-list"
      elem="value"
      key="value"
    >
      value1
    </Bem>
  </Bem>
  <Bem
    block="tag-list"
    elem="item"
    key="value2"
  >
    <Bem
      block="tag-list"
      elem="value"
      key="value"
    >
      value2
    </Bem>
  </Bem>
  <Bem
    block="tag-list"
    elem="item"
    key="value3"
  >
    <Bem
      block="tag-list"
      elem="value"
      key="value"
    >
      value3
    </Bem>
  </Bem>
  <Bem
    block="tag-list"
    elem="input"
    key="input"
  />
</Bem>
`;
